--- a/02_Projects/Stm32Bahrs/TargetApp/BahrsTargetApp.ioc
+++ b/02_Projects/Stm32Bahrs/TargetApp/BahrsTargetApp.ioc
@@ -1,4 +1,14 @@
 #MicroXplorer Configuration settings - do not modify
+CAN2.ABOM=ENABLE
+CAN2.AWUM=ENABLE
+CAN2.BS1=CAN_BS1_2TQ
+CAN2.BS2=CAN_BS2_2TQ
+CAN2.CalculateBaudRate=500000
+CAN2.CalculateTimeBit=2000
+CAN2.CalculateTimeQuantum=400.0
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,ABOM,AWUM,TXFP
+CAN2.Prescaler=18
+CAN2.TXFP=ENABLE
 Dma.I2C1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.I2C1_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.2.Instance=DMA1_Stream0
@@ -68,25 +78,26 @@ I2C3.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
-Mcu.IP0=CRC
-Mcu.IP1=DMA
-Mcu.IP10=SPI2
-Mcu.IP11=SPI3
-Mcu.IP12=SYS
-Mcu.IP13=TIM2
-Mcu.IP14=TIM3
-Mcu.IP15=TIM5
-Mcu.IP16=TIM7
-Mcu.IP17=USART1
-Mcu.IP2=FMPI2C1
-Mcu.IP3=FREERTOS
-Mcu.IP4=I2C1
-Mcu.IP5=I2C2
-Mcu.IP6=I2C3
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SPI1
-Mcu.IPNb=18
+Mcu.IP0=CAN2
+Mcu.IP1=CRC
+Mcu.IP10=SPI1
+Mcu.IP11=SPI2
+Mcu.IP12=SPI3
+Mcu.IP13=SYS
+Mcu.IP14=TIM2
+Mcu.IP15=TIM3
+Mcu.IP16=TIM5
+Mcu.IP17=TIM7
+Mcu.IP18=USART1
+Mcu.IP2=DMA
+Mcu.IP3=FMPI2C1
+Mcu.IP4=FREERTOS
+Mcu.IP5=I2C1
+Mcu.IP6=I2C2
+Mcu.IP7=I2C3
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=19
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
@@ -120,31 +131,36 @@ Mcu.Pin33=PC12
 Mcu.Pin34=PD2
 Mcu.Pin35=PB3
 Mcu.Pin36=PB4
-Mcu.Pin37=PB8
-Mcu.Pin38=PB9
-Mcu.Pin39=VP_CRC_VS_CRC
+Mcu.Pin37=PB5
+Mcu.Pin38=PB6
+Mcu.Pin39=PB8
 Mcu.Pin4=PC1
-Mcu.Pin40=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin41=VP_SYS_VS_tim6
-Mcu.Pin42=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM3_VS_no_output1
-Mcu.Pin45=VP_TIM3_VS_no_output2
-Mcu.Pin46=VP_TIM5_VS_ControllerModeClock
-Mcu.Pin47=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin48=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin40=PB9
+Mcu.Pin41=VP_CRC_VS_CRC
+Mcu.Pin42=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin43=VP_SYS_VS_tim6
+Mcu.Pin44=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM3_VS_no_output1
+Mcu.Pin47=VP_TIM3_VS_no_output2
+Mcu.Pin48=VP_TIM5_VS_ControllerModeClock
+Mcu.Pin49=VP_TIM5_VS_ClockSourceITR
 Mcu.Pin5=PC2
+Mcu.Pin50=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA4
-Mcu.PinsNb=49
+Mcu.PinsNb=51
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.CAN2_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN2_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN2_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -259,6 +275,14 @@ PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=SYNC_ENABLE
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=CAN_RX
+PB5.Mode=CAN_Activate
+PB5.Signal=CAN2_RX
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=CAN_TX
+PB6.Mode=CAN_Activate
+PB6.Signal=CAN2_TX
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
